<resources>
    <string name="app_name">Champion Of Sudoku</string>
    <string name="new_board">Main Menu</string>
    <string name="action_share">Show/Share</string>
    <string name="action_instructions">Instructions</string>
    <string name="action_logout">Sign out of account</string>
    <string name="action_login">Sign in to Google</string>
    <string name="action_about">About</string>
    <string name="myemail">licktopia@gmail.com</string>
    <string name="highlight_key">Highlight</string>
    <string name="Highlights">Row/Col Highlights</string>
    <string name="Highsummary">When square is selected, entire row, column, and box are also highlighted.</string>
    <string name="settings">Settings</string>
    <string name="sounds_key">Sounds</string>
    <string name="autologin_key">AutoLogin</string>
    <string name="Sounds">Sounds Off</string>
    <string name="score_key">Score</string>
    <string name="app_id">196327495694</string>
    <string name="Score">Always Hide Score</string>
    <string name="sign_in_button">Sign in</string>
    <string name="Scoresummary">The score will always be hidden until the puzzle is solved. It cannot be toggled by clicking on it.</string>
    <string name="harder_puzzle_message">Harder puzzles will earn more XP</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.licktopia.thechampionofsudoku</string>
    <string name="quit_to_menu">Quit to main menu?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure you want to exit? In game progress may be lost. Finished games data is already saved.</string>
    <string name="signin_other_error">There was an issue with sign-in, please try again later.".</string>
    <string name="signin_failure">Unable to sign in.".</string>
    <string name="share_with_your_friends">Share with friends</string>
    <string name="beginner">Beginner</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>
    <string name="master">Master</string>
    <string name="art_mode">Art Mode</string>
    <string name="classic_numbers">Classic Numbers</string>
    <string name="stats_amp_more"><![CDATA[Stats & More]]></string>
    <string name="sign_in_message">Sign In to view stats, level up, and more</string>
    <string name="login_tosee_leaderboards">You must be logged in to view leaderboards</string>
    <string name="package_name">com.licktopia.thechampionofsudoku</string>
    <string name="achievement_joy_giver">CgkIjrCfsNsFEAIQCQ</string>
    <string name="achievement_up_and_comer">CgkIjrCfsNsFEAIQCg</string>
    <string name="achievement_sharp_shooter">CgkIjrCfsNsFEAIQCw</string>
    <string name="achievement_speed_demon">CgkIjrCfsNsFEAIQDA</string>
    <string name="achievement_big_time_scorer">CgkIjrCfsNsFEAIQDQ</string>
    <string name="achievement_up_and_comer_ii">CgkIjrCfsNsFEAIQDg</string>
    <string name="achievement_sharp_shooter_ii">CgkIjrCfsNsFEAIQDw</string>
    <string name="achievement_speed_demon_ii">CgkIjrCfsNsFEAIQEA</string>
    <string name="achievement_big_time_scorer_ii">CgkIjrCfsNsFEAIQEQ</string>
    <string name="achievement_up_and_comer_iii">CgkIjrCfsNsFEAIQEg</string>
    <string name="achievement_sharp_shooter_iii">CgkIjrCfsNsFEAIQEw</string>
    <string name="achievement_speed_demon_iii">CgkIjrCfsNsFEAIQFA</string>
    <string name="achievement_big_time_scorer_iii">CgkIjrCfsNsFEAIQFQ</string>
    <string name="achievement_braggart">CgkIjrCfsNsFEAIQFg</string>
    <string name="leaderboard_fastest_time_beginner">CgkIjrCfsNsFEAIQAQ</string>
    <string name="leaderboard_fastest_time_easy">CgkIjrCfsNsFEAIQAg</string>
    <string name="leaderboard_fastest_time_medium">CgkIjrCfsNsFEAIQAw</string>
    <string name="leaderboard_fastest_time_hard">CgkIjrCfsNsFEAIQBA</string>
    <string name="leaderboard_fastest_time_expert">CgkIjrCfsNsFEAIQBQ</string>
    <string name="leaderboard_fastest_time_master">CgkIjrCfsNsFEAIQBg</string>
    <string name="leaderboard_opponents_vanquished_multiplayer" translatable="false">CgkIjrCfsNsFEAIQFw</string>
    <string name="leaderboard_rank_multiplayer">CgkIjrCfsNsFEAIQGA</string>
    <string name="leaderboard_most_total_xp">CgkIjrCfsNsFEAIQBw</string>
    <string name="leaderboard_highest_single_game_score">CgkIjrCfsNsFEAIQCA</string>

    <string name="mustbe_loggedin_viewachievements">You must be logged in to view achievements</string>
    <string name="login_touse_thisfeature">You must be logged in to use this feature</string>
    <string name="login_toview_profile">You must be logged in to view gamer profile</string>
    <string name="facebook_app_id">1040720769395510</string>
    <string name="scoretime_submitted">Score and time submitted to leaderboards.</string>
    <string name="nolonger_loggedin">You are no longer logged in</string>
    <string name="me">Me</string>
    <string name="getting_profile_info">Getting profile information</string>
    <string name="lilnumber_key">LilNumbers</string>
    <string name="LilNumbers">Show number/color amounts</string>
    <string name="show_the_total">Show the total amount of each number/color on the board</string>
    <string name="not_upload">Could not upload game to database</string>
    <string name="next_levelup">Next Level Up</string>
    <string name="game_history">\'s Game History</string>
    <string name="save_game">Save Game</string>
    <string name="saved_game_succ_deleted">Saved game successfully deleted.</string>
    <string name="delete_saved">Delete Saved Game</string>
    <string name="puzzle_number">Puzzle number #</string>
    <string name="resume_game">Resume Game?</string>
    <string name="cancel">Cancel</string>
    <string name="your_saved_games">\'s Saved Games</string>
    <string name="game_saved">Game Saved</string>
    <string name="autosave">Autosave</string>
    <string name="saves_inprogress">Saves game in progress when app is closed</string>
    <string name="gamesavedwithalias">Game saved with alias\u0020</string>
    <string name="must_be_logged_in">You must be logged in to use this feature</string>
    <string name="invite_dialog_title">Invite Players</string>
    <string name="about_dialog_title">About the App</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="game_not_saved">Game not saved</string>
    <string name="match_canceled">The match has been canceled!</string>
    <string name="invitation_removed">An invitation has been removed</string>
    <string name="multiplayer_win">You are a winner!</string>
    <string name="multiplayer_loss">You lost!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unavailable_multiplayer">Unavailable for multiplayer game</string>
    <string name="sure_exit">Are you sure you want to exit?</string>
    <string name="check_your_internet">Check your Internet connection and try again</string>
    <string name="num">number</string>
    <string name="art">art</string>
    <string name="start_ga">Start game in</string>
    <string name="mode">mode?</string>
    <string name="begin">Begin</string>
    <string name="try_harder">Try Harder Puzzles to Gain More XP</string>
    <string name="difficulty">Difficulty</string>
    <string name="disconnectedFromRoom">You have been disconnected from the room!</string>
    <string name="invitationRemoved">Invitation has been removed!</string>
    <string name="all_level">All Sudokus</string>
    <string name="couldnt_find">Couldn\'t find any boards with a key of</string>
    <string name="my_best_time">My best time is</string>
    <string name="my_best_score">My best score is</string>
    <string name="my_best_sc">My best score is</string>
</resources>
